--- a/01-troende.html
+++ b/01-troende.html
@@ -37,8 +37,8 @@
       <h1>Alle</h1>
     </header>
     <nav>
-      <button data-troende="alle">Alle</button>
-      <button data-troende="ja" class="valgt">Troende</button>
+      <button data-troende="alle" class="valgt">Alle</button>
+      <button data-troende="ja">Troende</button>
       <button data-troende="nej">Ikke troende</button>
       <button data-troende="tvivler">Tvivler</button>
     </nav>
@@ -62,12 +62,24 @@
           "x-apikey": "600fe9211346a1524ff12e31",
         },
       };
-      let personer;
 
       document.addEventListener("DOMContentLoaded", start);
-      let filter = "ja";
+      let personer;
+
+      let filter = "alle";
       function start() {
+        const filterKnapper = document.querySelectorAll("nav button");
+        filterKnapper.forEach((knap) => knap.addEventListener("click", filtrerPersoner));
         hentData();
+      }
+
+      function filtrerPersoner() {
+        filter = this.dataset.troende;
+        document.querySelector(".valgt").classList.remove("valgt");
+        this.classList.add("valgt");
+
+        visPersoner();
+        header.textContent = this.textContent;
       }
 
       async function hentData() {
@@ -80,8 +92,9 @@
       function visPersoner() {
         const holder = document.querySelector("#holder");
         const skabelon = document.querySelector("template").content;
+        holder.textContent = "";
         personer.forEach((person) => {
-          if (filter == person.troende) {
+          if (filter == person.troende || filter == "alle") {
             const klon = skabelon.cloneNode(true);
             klon.querySelector(".fornavn").textContent = person.fornavn;
             klon.querySelector("img").src = "faces/" + person.billede;
