--- a/personer-filter-modal.html
+++ b/personer-filter-modal.html
@@ -133,6 +133,8 @@
         });
       }
 
+      document.querySelector("#popup").addEventListener("click", () => (popup.style.display = "none"));
+
       function visPerson(personData) {
         console.log(personData);
         const popup = document.querySelector("#popup");
@@ -140,7 +142,6 @@
         popup.querySelector("img").src = "faces/" + personData.billede;
         popup.querySelector("img").alt = personData.fornavn;
         popup.querySelector("h2").textContent = personData.fornavn + " " + personData.efternavn;
-        popup.addEventListener("click", () => (popup.style.display = "none"));
       }
     </script>
   </body>
